--- a/css/style.css
+++ b/css/style.css
@@ -4,31 +4,50 @@
 a.skip, header, .nav_links, .container,
 .intro, html, .text-block, etc.*/
 
-body {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
+a.skip{
+    top: 40px;
+    display: none;
 }
 
-body main img {
-    width: 100%;
+body:hover .skip{
+    display: block;
 }
 
-body .nav_links {
-    display: flex;
-    text-align: center;
-    justify-content: flex-end;
-    flex-flow: wrap;
+@media screen and (max-width:750px) {
+    body {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    body main img {
+        width: 100%;
+    }
+
+    body .nav_links {
+        display: flex;
+        text-align: center;
+        justify-content: flex-end;
+        flex-flow: wrap;
+    }
+
+    body .nav_links li a:focus {
+        color: #50C7C7;
+    }
+
+    body .nav_links li a:hover {
+        color: #50C7C7;
+    }
+
+    .container {
+        display: grid;
+    }
 }
 
-body .nav_links li a:focus {
-    color: #50C7C7;
-}
 
-body .nav_links li a:hover {
-    color: #50C7C7;
-}
 
-.container {
-    display: grid;
+@media screen and (min-width:750px) {
+    body {
+        background-color: red;
+    }
 }
