--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,7 @@ body .nav_links li a:hover {
     #main {
         background-image: url(../images/header.jpg);
         background-attachment: fixed;
-        background-size: cover;
+        background-size: auto 100%;
         background-position: center center;
         background-repeat: no-repeat;
         grid-column: 1/6;
@@ -221,6 +221,7 @@ body .nav_links li a:hover {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        align-items: center;
     }
 
     #logo {
@@ -250,7 +251,7 @@ body .nav_links li a:hover {
     #main {
         background-image: url(../images/header.jpg);
         background-attachment: fixed;
-        background-size: cover;
+        background-size: auto 100%;
         background-position: center center;
         background-repeat: no-repeat;
         grid-column: 1/8;
