--- a/css/style.css
+++ b/css/style.css
@@ -251,7 +251,7 @@ body .nav_links li a:hover {
     #main {
         background-image: url(../images/header.jpg);
         background-attachment: fixed;
-        background-size: auto 100%;
+        background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
         grid-column: 1/8;
@@ -290,6 +290,31 @@ body .nav_links li a:hover {
     .text-block{
         place-self: center center;
     }
+}
+
+@media print{
+    body .nav_links {
+        display: flex;
+        text-align: center;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+    
+    main img{
+        display: none;
+    }
+
+    .text-block, .intro{
+        height: auto;
+        min-height: auto;
+    }
+
+    .container {
+        display: grid;
+        grid-template-rows: auto;
+        margin: 30px;
+    }
+
 }
 
 @-webkit-keyframes logomove {
